Working with attribute objects

--- a/builds/development/partials/app.html
+++ b/builds/development/partials/app.html
@@ -1,7 +1,7 @@
 <div class="artistsearch">
     <div class="card search">
         <h1>Artist Directory</h1>
-        <span>name: {{name}}</span>
+        <span *ngIf="name">name: {{name}}</span>
     </div>
 </div>
 
