--- a/builds/development/partials/app.html
+++ b/builds/development/partials/app.html
@@ -1,7 +1,7 @@
 <div class="artistsearch">
     <div class="card search">
         <h1>Artist Directory</h1>
-        <label>name: {{name}}</label>
+        <label *ngIf="name" [innerHTML]="'name: ' + name"></label>
         <input #newArtist
         (keyup.enter) = "addArtist(newArtist.value); newArtist.value = ''"
         (blur) = "addArtist(newArtist.value); newArtist.value = ''"
@@ -12,7 +12,7 @@
 
 <hr />
 <ul class="artistlist cf">
-    <li (click)="onClick(item)" *ngFor="#item of artists">
+    <li #artistContainer (click)="onClick(item, artistContainer)" *ngFor="#item of artists">
         <h2>{{item}}</h2>
     </li>
 </ul>
