--- a/builds/development/partials/app.html
+++ b/builds/development/partials/app.html
@@ -3,8 +3,10 @@
         <h1>Artist Directory</h1>
         <label *ngIf="name" [innerHTML]="'name: ' + name"></label>
         <input #newArtist
-        (keyup.enter) = "addArtist(newArtist.value); newArtist.value = ''"
-        (blur) = "addArtist(newArtist.value); newArtist.value = ''"
+            [value]="name"
+            (input)="name=$event.target.value"
+            (keyup.enter) = "addArtist(newArtist.value); newArtist.value = ''"
+            (blur) = "addArtist(newArtist.value); newArtist.value = ''"
         >
             <button (click)="addArtist(newArtist.value)">Add</button>
     </div>
