--- a/components/sass/_base.scss
+++ b/components/sass/_base.scss
@@ -9,7 +9,13 @@ body{
   color: $headColor;
   font-weight: $bold;
 }
-
+h1{
+  font-size: 2em;
+}
+h3{
+  color: $subHeadColor;
+  font-size: 1em;
+}
 strong {
   font-weight: $bold;
 }
