--- a/components/sass/modules/artistinfo.scss
+++ b/components/sass/modules/artistinfo.scss
@@ -7,7 +7,6 @@
   margin-right: auto;
   margin-top: 20px;
   padding: 30px 40px;
-  position: relative;
   opacity: 1;
   border: 1px solid #e8e8e8;
   box-shadow: 0 1px 0 rgba(0, 0, 0, .25);
@@ -28,7 +27,9 @@
   }
 
   img {
+    float: left;
     width: 40%;
+    margin-right:20px ;
     max-width: 130px;
   }
 
