--- a/components/sass/modules/search.scss
+++ b/components/sass/modules/search.scss
@@ -1,4 +1,5 @@
 .search {
+
   width: 100%;
   min-width: 320px;
   max-width: 500px;
@@ -12,7 +13,8 @@
   }//h1
 
   label {
-    font-size: 1rem;
+    color: $grey;
+    font-size: 1.2rem;
     text-align: left;
     font-family: Lato, 'Helvetica Nueue', Helvetica, Arial, sans-serif;
   }
